--- a/codemirror.css
+++ b/codemirror.css
@@ -65,6 +65,7 @@
 
 .cm-number { color: #00A3D4; }
 .cm-string { color: #B80015; }
+.cm-atom { color: #B80015; }
 
 span.CodeMirror-selected {
   background: #ccc !important;
