--- a/assets/try.jade
+++ b/assets/try.jade
@@ -179,3 +179,40 @@ html
             #content
               border-radius: 5px
           textarea.css
+
+        .example
+          h2 Operators
+          p.
+            Stylus supports all the typical operators you've come to
+            expect from a language, as well as some specific to Stylus.
+
+          textarea.stylus
+            body
+              foo: 5px + 10
+              foo: 2 ** 8
+              foo: 5px * 2
+              foo: !!''
+              foo: foo and bar and baz
+              foo: foo or bar or baz
+              foo: 1..5
+              foo: 1...5
+              foo: (1 2 3) == (1 2 3)
+              foo: (1 2 3) == (1 2)
+              foo: ((one 1) (two 2)) == ((one 1) (two 2)) 
+              foo: ((one 1) (two 2)) == ((one 1) (two)) 
+              foo: ((one 1) (two 2))[0]
+
+          textarea.css
+        
+          p.
+            Type coercion is performed when appropriate:
+          
+          textarea.stylus
+            body
+              foo: foo + bar
+              foo: 'foo ' + bar
+              foo: 'foo ' + 'bar'
+              foo: 'foo ' + 5px
+              foo: 2s - 500ms
+
+          textarea.css
