--- a/assets/try.jade
+++ b/assets/try.jade
@@ -183,8 +183,8 @@ html
         .example
           h2 Operators
           p.
-            Stylus supports all the typical operators you've come to
-            expect from a language, as well as some specific to Stylus.
+            Stylus supports all the <a href="docs/operators.html">operators</a>
+            you've come to expect from a language, as well as some specific to Stylus.
 
           textarea.stylus
             body
@@ -201,6 +201,7 @@ html
               foo: ((one 1) (two 2)) == ((one 1) (two 2)) 
               foo: ((one 1) (two 2)) == ((one 1) (two)) 
               foo: ((one 1) (two 2))[0]
+              foo: 3 in (1 2 3 4)
 
           textarea.css
         
