--- a/assets/try.jade
+++ b/assets/try.jade
@@ -196,6 +196,7 @@ html
               foo: foo or bar or baz
               foo: 1..5
               foo: 1...5
+              foo: 'foo' is a 'string'
               foo: (1 2 3) == (1 2 3)
               foo: (1 2 3) == (1 2)
               foo: ((one 1) (two 2)) == ((one 1) (two 2)) 
@@ -215,5 +216,21 @@ html
               foo: 'foo ' + 'bar'
               foo: 'foo ' + 5px
               foo: 2s - 500ms
+
+          textarea.css
+
+          p.
+            Operations against colors are especially useful.
+            When adding or subtracting by a percentage the
+            color lightness may be adjusted, or adjust the
+            hue with <em>deg</em>:
+          
+          textarea.stylus
+            body
+              foo: white - 50%
+              foo: black + 50%
+              foo: #eee - #f00
+              foo: #eee - rgba(black,.5)
+              foo: #cc0000 + 30deg
 
           textarea.css
