--- a/assets/try.jade
+++ b/assets/try.jade
@@ -253,3 +253,22 @@ html
               foo: sum(1, 2, 3)
               foo: sum-function(1, 2, 3, 4, 5, 6)
           textarea.css
+
+          p.
+            Keyword arguments are also supported to make
+            function invocation more expressive, also allowing
+            you to disregard argument ordering.
+
+          textarea.stylus
+            fade-out(color, amount = 50%)
+              amount /= 100
+              color - rgba(0,0,0,amount)
+
+            body
+              foo: fade-out(#eee)
+              foo: fade-out(#eee, 20%)
+              foo: fade-out(#eee, amount: 50%)
+              foo: fade-out(color: #eee, amount: 50%)
+              foo: fade-out(amount: 50%, #eee)
+              foo: fade-out(amount: 50%, color: #eee)
+          textarea.css
