--- a/assets/try.jade
+++ b/assets/try.jade
@@ -247,13 +247,12 @@ html
               n = 0
               n += num for num in nums
 
-            sum-function = sum
- 
             body
               foo: sum(1, 2, 3)
-              foo: sum-function(1, 2, 3, 4, 5, 6)
           textarea.css
 
+        .example
+          h2 Keyword arguments
           p.
             Keyword arguments are also supported to make
             function invocation more expressive, also allowing
