Added new try stylus thinger, really sketchy

--- a/assets/index.jade
+++ b/assets/index.jade
@@ -7,6 +7,8 @@ html
   body
     #container
       include head
+      #ribbon
+        a(href='http://github.com/learnboost/stylus') Fork me on GitHub
       #content
         .example
           h2 CSS needs a hero
