--- a/assets/main.styl
+++ b/assets/main.styl
@@ -46,7 +46,7 @@ inset()
   box-shadow rgba(dark-gray, 0.1) -1px -1px
 
 html
-  dark = #dadada
+  dark = #ECECEC
   background dark
   background -moz-linear-gradient(-90deg, #fff, dark) fixed
   background -webkit-gradient(linear, left top, left bottom, from(#fff), to(dark)) fixed
@@ -137,9 +137,6 @@ ul
         color black
         text-decoration none
       
-
-.example
-  margin-top 25px
 
 pre
   width width = 320px
