--- a/codemirror.css
+++ b/codemirror.css
@@ -1,7 +1,127 @@
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+#try p {
+  line-height: 1.5;
+  width: 400px;
+  color: #888;
+}
+.clearfix {
+	display: inline-block;
+}
+.buttons {
+  float: left;
+  clear: both;
+}
+.buttons a {
+  float: left;
+  margin: 0 2px;
+}
+#prev {
+  opacity: 0;
+  -webkit-transition: opacity 400ms;
+  -moz-transition: opacity 400ms;
+  transition: opacity 400ms;
+}
+#next {
+  -webkit-transition: opacity 400ms;
+  -moz-transition: opacity 400ms;
+  transition: opacity 400ms;
+}
+#next.hide {
+  opacity: 0;
+}
+#prev.show {
+  opacity: 1;
+}
+#prev,
+#next {
+  display: block;
+  border: 1px solid #eee;
+  padding: 50px;
+  -webkit-border-radius: 60px;
+  -moz-border-radius: 60px;
+  border-radius: 60px;
+  -webkit-box-shadow: inset #eee 0 0 5px 0;
+  -moz-box-shadow: inset #eee 0 0 5px 0;
+  -box-shadow: inset #eee 0 0 5px 0;
+  background: white;
+  margin-top: -60px;
+  color: #888;
+}
+#next:hover,
+#prev:hover {
+  text-decoration: none;
+  -webkit-box-shadow: inset #ddd 0 0 10px 0;
+}
+#next:active,
+#prev:active {
+  text-decoration: none;
+  -webkit-box-shadow: inset #ddd 5px 0 10px 0;
+}
+#prev:active {
+  -webkit-box-shadow: inset #ddd -5px 0 10px 0;
+}
+#prev {
+  position: fixed;
+  top: 50%;
+  left: -100px;
+  padding-left: 120px;
+}
+#next {
+  position: fixed;
+  top: 50%;
+  right: -100px;
+  padding-right: 120px;
+}
+/*.minimal {
+  display: block;
+  background: #eee;
+  border: 1px solid #bbb;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0 0 1px 1px #f6f6f6;
+  -moz-box-shadow: inset 0 0 1px 1px #f6f6f6;
+  -ms-box-shadow: inset 0 0 1px 1px #f6f6f6;
+  -o-box-shadow: inset 0 0 1px 1px #f6f6f6;
+  box-shadow: inset 0 0 1px 1px #f6f6f6;
+  color: #333;
+  font: bold 12px "helvetica neue", helvetica, arial, sans-serif;
+  line-height: 1;
+  padding: 8px 0 9px;
+  text-align: center;
+  text-shadow: 0 1px 0 #fff;
+  width: 80px; }
+  .minimal:hover {
+    background: #fff;
+    -webkit-box-shadow: inset 0 0 1px 1px #efefef;
+    -moz-box-shadow: inset 0 0 1px 1px #efefef;
+    -ms-box-shadow: inset 0 0 1px 1px #efefef;
+    -o-box-shadow: inset 0 0 1px 1px #efefef;
+    box-shadow: inset 0 0 1px 1px #efefef;
+    color: #222;
+    cursor: pointer; }
+  .minimal:active {
+    background: #d0d0d0;
+    -webkit-box-shadow: inset 0 0 1px 1px #e3e3e3;
+    -moz-box-shadow: inset 0 0 1px 1px #e3e3e3;
+    -ms-box-shadow: inset 0 0 1px 1px #e3e3e3;
+    -o-box-shadow: inset 0 0 1px 1px #e3e3e3;
+    box-shadow: inset 0 0 1px 1px #e3e3e3;
+    color: #000; }*/
 .CodeMirror {
   line-height: 1.2;
   font-size: 12px;
   font-family: monaco, monospace;
+  margin: 5px 1px;
 }
 
 .CodeMirror-scroll {
@@ -9,10 +129,10 @@
   /* This is needed to prevent an IE[67] bug where the scrolled content
      is visible outside of the scrolling box. */
   position: relative;
-  margin: 5px 0;
-  width: 400px;
+  margin: 0;
+  width: 350px;
 }
-
+.step { display: none;}
 .CodeMirror-gutter {
   position: absolute; left: 0; top: 0;
   z-index: 10;
@@ -29,9 +149,6 @@
 }
 .CodeMirror-lines {
   background: white;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
   padding: 20px;
 }
 
