--- a/try.css
+++ b/try.css
@@ -1,8 +1,3 @@
-html {
-  background: #dadada;
-  background: -moz-linear-gradient(-90deg, #fff, #dadada) fixed;
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#dadada)) fixed;
-}
 body {
   padding: 120px 50px;
   font: 14px/1.4 "helvetica neue", helvetica, arial, sans-serif;
@@ -24,6 +19,7 @@ h3 a:hover {
   text-decoration: none;
 }
 h1 {
+  display: none;
   margin: 10px 0 15px 0;
   font-weight: bold;
   font-size: 60px;
@@ -53,6 +49,7 @@ ul li {
   list-style: square;
 }
 .tagline {
+  display: none;
   margin: 0;
   padding: 0;
 }
@@ -76,8 +73,9 @@ ul li {
 }
 #container #content {
   margin: 0 auto;
-  padding-top: 40px;
-  width: 90%;
+  padding-top: 30px;
+  padding-left: 30px;
+  width: 70%;
   text-align: left;
 }
 #menu {
