--- a/assets/head.jade
+++ b/assets/head.jade
@@ -25,3 +25,4 @@ ul#menu
   li: a(href='docs/middleware.html') Connect Middleware
   li: a(href='docs/introspection.html') Introspection API
   li: a(href='docs/js.html') JavaScript API
+  li: a(href='try.html') Try Stylus Online!
