--- a/assets/head.jade
+++ b/assets/head.jade
@@ -25,4 +25,5 @@ ul#menu
   li: a(href='docs/middleware.html') Connect Middleware
   li: a(href='docs/introspection.html') Introspection API
   li: a(href='docs/js.html') JavaScript API
+  li: a(href='http://github.com/visionmedia/nib') CSS3 Extensions with Nib
   li: a(href='try.html') Try Stylus Online!
