Added support for rgb percentages.

--- a/test/cases/literal.color.css
+++ b/test/cases/literal.color.css
@@ -3,4 +3,6 @@ body {
   color: rgba(255,204,0,0.40);
   color: #fc0;
   color: rgba(255,204,0,0.40);
+  color: #fff;
+  color: rgba(255,255,255,0.50);
 }
