--- a/test/cases/bifs.join.css
+++ b/test/cases/bifs.join.css
@@ -1,18 +1,18 @@
 body {
-  foo: "1 2 3";
-  foo: "1, 2, 3";
-  foo: "1,2,3";
-  foo: "1";
+  foo: '1 2 3';
+  foo: '1, 2, 3';
+  foo: '1,2,3';
+  foo: '1';
   foo: true;
 }
 body {
-  foo: "1, 2, 3";
-  foo: "one 1, two 2, three 3";
+  foo: '1, 2, 3';
+  foo: 'one 1, two 2, three 3';
 }
 body {
-  foo: "1 2, #fff #000, 5px 6px";
-  foo: "1 2, 3 4, 5 6";
-  foo: "1 2, 3 4, 5 6";
-  foo: "1, 2, 3, 4, 5, 6";
-  foo: "1, 2, 3, 4, 5, 6";
+  foo: '1 2, #fff #000, 5px 6px';
+  foo: '1 2, 3 4, 5 6';
+  foo: '1 2, 3 4, 5 6';
+  foo: '1, 2, 3, 4, 5, 6';
+  foo: '1, 2, 3, 4, 5, 6';
 }
