--- a/assets/head.jade
+++ b/assets/head.jade
@@ -16,6 +16,7 @@ ul#menu
   li: a(href='docs/media.html') @media
   li: a(href='docs/font-face.html') @font-face
   li: a(href='docs/keyframes.html') @keyframes
+  li: a(href='docs/extend.html') @extend
   li: a(href='docs/functions.url.html') url()
   li: a(href='docs/literal.html') CSS Literal
   li: a(href='docs/css-style.html') CSS Style Syntax
