--- a/test/cases/regression.498.css
+++ b/test/cases/regression.498.css
@@ -1,6 +1,7 @@
 button,
 a.button,
-input[type=submit] {
+input[type=submit],
+.button {
   padding: 10px;
   border: 1px solid #eee;
   font-size: 12px;
