Default mix's amout set to 50% as SASS

--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -125,7 +125,7 @@ spin(color, amount)
 
 // mix two colors by a given amount
 
-mix(colorA, colorB, amount)
+mix(colorA, colorB, amount=50%)
   if colorB is a 'unit' and amount is a 'color'
     return mix(colorA, amount, colorB)
   require-color(colorA)
