Fixed `opposite-position()` pass through "center"`

--- a/test/cases/bifs.opposite-position.styl
+++ b/test/cases/bifs.opposite-position.styl
@@ -5,5 +5,6 @@ body
   foo opposite-position(left) == right
   foo opposite-position(top left)[0] == bottom
   foo opposite-position(top left)[1] == right
+  foo opposite-position(center) == center
   val = top left
   foo opposite-position(val)
