--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -123,18 +123,18 @@ fade-in(color, amount)
 spin(color, amount)
   color + unit(amount, deg)
 
-// mix two colors by a given amount
+// mix two colors by a given weight
 
-mix(colorA, colorB, amount=50%)
-  if colorB is a 'unit' and amount is a 'color'
-    return mix(colorA, amount, colorB)
+mix(colorA, colorB, weight=50%)
+  if colorB is a 'unit' and weight is a 'color'
+    return mix(colorA, weight, colorB)
   require-color(colorA)
   require-color(colorB)
-  require-unit(amount)
-  if unit(amount) is '%'
-    amount = (amount / 100)
-  reverse = 1 - amount
-  return colorA * reverse + colorB * amount
+  require-unit(weight)
+  if unit(weight) is '%'
+    weight = (weight / 100)
+  reverse = 1 - weight
+  return colorA * reverse + colorB * weight
 
 // return the last value in the given expr
 
