--- a/test/cases/bifs.mix.css
+++ b/test/cases/bifs.mix.css
@@ -3,6 +3,8 @@ body {
   foo: #bf0000;
   foo: #54ab00;
   foo: #54ab00;
-  foo: #f00;
-  foo: #f00;
+  foo: #a60059;
+  foo: rgba(166,0,89,0.82);
+  foo: #a60059;
+  foo: #a60059;
 }
