--- a/test/cases/bifs.mix.styl
+++ b/test/cases/bifs.mix.styl
@@ -3,5 +3,7 @@ body
   foo: mix(red, black, 25%)
   foo: mix(lime, red, 33%)
   foo: mix(lime, 33%, red)
-  foo: mix(red, rgba(red,1), 50%)
-  foo: mix(red, rgba(red,0.5), 50%)
+  foo: mix(red, rgba(blue,1), 35%)
+  foo: mix(red, rgba(blue,0.5), 35%)
+  foo: mix(red, rgba(blue,0.5), 35%, false)
+  foo: mix(red, rgba(blue,0.5), weight: 35%, opacity: false)
