--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -126,15 +126,21 @@ spin(color, amount)
 // mix two colors by a given amount
 
 mix(color1, color2, weight = 50%)
+  unless weight in 0..100
+    error("Weight must be between 0% and 100%")
+
+  if length(color1) == 2
+    weight = color1[0]
+    color1 = color1[1]
+
+  else if length(color2) == 2
+    weight = 100 - color2[0]
+    color2 = color2[1]
+
   require-color(color1)
   require-color(color2)
 
-  if weight in 0..100
-    weight = unit(weight, '')
-  else
-    error("Weight must be between 0% and 100%")
-
-  p = weight / 100
+  p = unit(weight / 100, '')
   w = p * 2 - 1
 
   a = alpha(color1) - alpha(color2)
@@ -143,7 +149,6 @@ mix(color1, color2, weight = 50%)
   w2 = 1 - w1
 
   channels = (red(color1) red(color2)) (green(color1) green(color2)) (blue(color1) blue(color2))
-
   rgb = ()
 
   for pair in channels
