Allow for '%' unit type in the 'alpha' of rgba and hsla

--- a/test/cases/literal.color.css
+++ b/test/cases/literal.color.css
@@ -7,4 +7,8 @@ body {
   color: rgba(255,204,0,0.40);
   color: #fff;
   color: rgba(255,255,255,0.50);
+  color: rgba(3,3,3,0.75);
+  color: rgba(3,3,3,0.75);
+  color: rgba(50,50,50,0.75);
+  color: rgba(50,50,50,0.75);
 }
