--- a/test/cases/literal.color.styl
+++ b/test/cases/literal.color.styl
@@ -7,3 +7,7 @@ body
   color: #ffcc0066
   color: rgb(100%,255,100%)
   color: rgba(100%,255,100%,0.5)
+  color: hsla(1,1,1,0.75)
+  color: hsla(1,1,1,75%)
+  color: rgba(50,50,50,0.75)
+  color: rgba(50,50,50,75%)
