--- a/assets/index.jade
+++ b/assets/index.jade
@@ -108,6 +108,9 @@ html
         .example.closing
           h2 Get styling with Stylus
           pre.terminal $ npm install stylus
+          h2 Use with Connect or Express
+          pre.terminal.
+            app.use(require('stylus').middleware({src: __dirname}));
           p
             | If you want an expressive css language for nodejs with these
             | features or the features listed below, head over to
