--- a/test/cases/bifs.rgba.styl
+++ b/test/cases/bifs.rgba.styl
@@ -2,3 +2,6 @@ body
   background rgba(255,8,0,1)
   background rgba(255,255,0,0.2)
   background rgba(#fc0, 0.5)
+  background rgba(255,255,0,0.25)
+  background rgba(255,255,0,0.258)
+  background rgba(255,255,0,0.2582)
