--- a/test/cases/bifs.pop.css
+++ b/test/cases/bifs.pop.css
@@ -1,20 +1,34 @@
 body {
   foo: 3;
   foo: 1 2;
+}
+body {
+  foo: 3;
   foo: 2;
   foo: 1;
-  foo: 1;
-  foo: ;
-  foo: null;
-  foo: 0;
 }
 body {
   foo: 1;
-  foo: 2 3;
-  foo: 2;
-  foo: 3;
-  foo: 3;
+  foo: 0;
+}
+body {
   foo: ;
-  foo: null;
+  foo: 0;
+}
+body {
+  foo: 4;
+  foo: 5 6;
+}
+body {
+  foo: 4;
+  foo: 5;
+  foo: 6;
+}
+body {
+  foo: 4;
+  foo: 0;
+}
+body {
+  foo: ;
   foo: 0;
 }
