--- a/test/cases/bifs.pop.styl
+++ b/test/cases/bifs.pop.styl
@@ -3,21 +3,47 @@ nums = (1 2 3)
 body
   foo: pop(nums)
   foo: nums
+
+nums = (1 2 3)
+
+body
+  foo: pop(nums)
   foo: pop(nums)
   foo: nums
+
+nums = (1)
+
+body
   foo: pop(nums)
-  foo: nums
-  foo: pop(nums)
-  foo: nums
   foo: length(nums)
 
-num = (1 2 3)
+nums = ()
+
+body
+  foo: pop(nums)
+  foo: length(nums)
+
+nums = (4 5 6)
 
 body
   foo: shift(nums)
   foo: nums
+
+nums = (4 5 6)
+
+body
+  foo: shift(nums)
   foo: shift(nums)
   foo: nums
+
+nums = (4)
+
+body
   foo: shift(nums)
-  foo: nums
+  foo: length(nums)
+
+nums = ()
+
+body
+  foo: shift(nums)
   foo: length(nums)
