--- a/test/cases/media.bubble.styl
+++ b/test/cases/media.bubble.styl
@@ -69,7 +69,12 @@ body
       .child
         more: stuff
 
+stuff()
+  @media and stuff
+    stuff: 1234
+
 complex
+  stuff()
   @media only awesome
     fizz: buzz
   @media not so awesome
