--- a/test/cases/bifs.fade.css
+++ b/test/cases/bifs.fade.css
@@ -3,4 +3,8 @@ body {
   color: rgba(238,238,238,0.5);
   color: #eee;
   color: rgba(238,238,238,0.4);
+  color: rgba(238,238,238,0.8);
+  color: rgba(238,238,238,0.5);
+  color: #eee;
+  color: rgba(238,238,238,0.4);
 }
