Less verbose function docs

--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -200,10 +200,8 @@ join(delim, vals...)
 // add a css rule to the containing block
 
 // - This definition allows add-property to be used as a mixin
-// - It has the same effect as interpolation but allows users to opt for a functional style
-// - It simplifies the documentation of add-property in that we don't need to
-//   specify that add-property only works as a function
-// - We need to save a refence to the function version
+// - It has the same effect as interpolation but allows users 
+//   to opt for a functional style
 
 add-property-function = add-property
 add-property(name, expr)
