Allow fade-out and fade-in to take % units; Add 2 new bifs for help in simple math work as used in the new fade-out and fade-in bifs

--- a/test/cases/bifs.fade.css
+++ b/test/cases/bifs.fade.css
@@ -4,3 +4,9 @@ body {
   color: #eee;
   color: rgba(238,238,238,0.4);
 }
+.test-percent-values {
+  color: rgba(238,238,238,0.8);
+  color: rgba(238,238,238,0.5);
+  color: #eee;
+  color: rgba(238,238,238,0.4);
+}
