Fixes #698: incorrect function call within for with named argument

--- a/test/cases/for.styl
+++ b/test/cases/for.styl
@@ -29,6 +29,13 @@ body
   for n in 1 2 3
     foo
       bar n
+      
+func(num)
+  return num
+  
+body
+  for n in 1 2 3
+    bar func(num: n)
 
 test(args...)
   foo
