Fixes #435: Can't concat array inside url()

--- a/test/cases/bifs.url.css
+++ b/test/cases/bifs.url.css
@@ -7,5 +7,6 @@ body {
   background: url("/images/foo.png");
   background: url("/images/foo.png");
   background: url("/images/foo.png");
+  background: url("/images/foo.png");
   background: url("http://foo.com/images/bar.png");
 }
