--- a/test/cases/bifs.url.styl
+++ b/test/cases/bifs.url.styl
@@ -12,4 +12,7 @@ body
   background url(dir + '/foo.png')
   background url(dir + '/' + img)
 
+  list = foo bar
+  background url('/images/' + list[0] + '.png')
+
   background url(http://foo.com/images/bar.png)
