use green banner on try stylus pages

--- a/assets/try.styl
+++ b/assets/try.styl
@@ -4,6 +4,7 @@ small = 14px
 dark-gray = #222
 light-gray = lighten(dark-gray, 15%)
 red = #a00
+green = #b3d107
 
 clearfix()
   &:before
@@ -160,4 +161,4 @@ p
     inset()
 
 #ribbon
-  ribbon(red)
+  ribbon(green)
