use green instead of red for links and <strong>

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -3,7 +3,6 @@ large = 60px
 small = 14px
 dark-gray = #222
 light-gray = lighten(dark-gray, 15%)
-red = #a00
 green = #b3d107
 
 border-radius(args...)
@@ -86,12 +85,12 @@ h3
 
 a
   text-decoration none
-  color #B90101
+  color darken(green, 10%);
   &:hover
     text-decoration underline
 
 strong
-  color red
+  color darken(green, 10%);
 
 ul
   margin 0
