--- a/main.css
+++ b/main.css
@@ -44,13 +44,13 @@ h3 {
 }
 a {
   text-decoration: none;
-  color: #b90101;
+  color: #a1bc06;
 }
 a:hover {
   text-decoration: underline;
 }
 strong {
-  color: #a00;
+  color: #a1bc06;
 }
 ul {
   margin: 0;
