--- a/test/cases/comments.css
+++ b/test/cases/comments.css
@@ -16,3 +16,7 @@ x:-moz-any-link,
 x:default select {
   font-weight: bold !important;
 }
+.abc // comment ending with comma,
+ {
+  color: #f00;
+}
