--- a/test/cases/comments.styl
+++ b/test/cases/comments.styl
@@ -26,3 +26,7 @@ html>/**/body select
 x:-moz-any-link
 x:default select
   font-weight bold !important
+
+.abc // comment ending with comma,
+  color red
+
