More useful testcase

--- a/test/cases/comments.css
+++ b/test/cases/comments.css
@@ -16,7 +16,6 @@ x:-moz-any-link,
 x:default select {
   font-weight: bold !important;
 }
-.abc // comment ending with comma,
- {
-  color: #f00;
+.abc {
+  background: url("img.png") 8px 8px no-repeat, rgba(0,0,0,0.41);
 }
