--- a/test/cases/comments.styl
+++ b/test/cases/comments.styl
@@ -7,7 +7,7 @@ body
   // wahoo
 
   // super cool
- 
+
   // background green
 
 form
@@ -27,6 +27,9 @@ x:-moz-any-link
 x:default select
   font-weight bold !important
 
-.abc // comment ending with comma,
-  color red
+.abc
+  background: // comment here,
+    url("img.png") 8px 8px no-repeat,
+    rgba(0, 0, 0, .41);
+
 
