added information that Stylus requires Node.js

--- a/assets/index.jade
+++ b/assets/index.jade
@@ -107,6 +107,11 @@ html
             }
         .example.closing
           h2 Get styling with Stylus
+          p
+            | Installing Stylus is very easy once you have <a href="http://nodejs.org/">Node.js</a>.
+            | So get the binaries for your platform and make sure that they also include npm, Node's package manager.
+          p
+            | Now, type in your terminal:
           pre.terminal $ npm install stylus
           p
             | If you want an expressive css language for nodejs with these
