Moved the fix from #988 to the styl file

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -148,7 +148,7 @@ pre
   width width = 320px
   padding 30px
   color color = #8D8D8D
-  font 12px\/1.4 monaco, 'helvetica neue', helvetica
+  font 12px\/1.4 monaco, monospace
   overflow-x auto
   inset()
   &.terminal
