Overflow for menu on small screens

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -124,8 +124,10 @@ ul
   position fixed
   top 5px
   right 60px
+  max-height: 90%
   margin 0
   padding 15px 0 10px 5px
+  overflow: auto
   background rgba(white,0.3)
   border 1px solid #ddd
   box-shadow inset rgba(dark-gray, 0.1) 0 4px 4px
