--- a/main.css
+++ b/main.css
@@ -91,8 +91,10 @@ ul li {
   position: fixed;
   top: 5px;
   right: 60px;
+  max-height: 90%;
   margin: 0;
   padding: 15px 0 10px 5px;
+  overflow: auto;
   background: rgba(255,255,255,0.3);
   border: 1px solid #ddd;
   -moz-box-shadow: inset rgba(34,34,34,0.1) 0 4px 4px;
