Added tests with `//` in attr selector, fixed the regex for inline comment from #862

--- a/test/cases/regression.810.css
+++ b/test/cases/regression.810.css
@@ -4,3 +4,21 @@ a {
 a.class {
   atr: def;
 }
+a[href='//'] {
+  atr: def;
+}
+a[href^='//'] {
+  atr: def;
+}
+a[href$='//'] {
+  atr: def;
+}
+a[href|='//'] {
+  atr: def;
+}
+a[href~='//'] {
+  atr: def;
+}
+a[href~='//'] {
+  atr: def;
+}
