--- a/test/cases/regression.810.styl
+++ b/test/cases/regression.810.styl
@@ -2,3 +2,15 @@ a // commant
     atr def
 a.class // comment
     atr def
+a[href='//']
+    atr def
+a[href^='//']
+    atr def
+a[href$='//']
+    atr def
+a[href|='//']
+    atr def
+a[href~='//']
+    atr def
+a[href~='//']
+    atr def
