--- a/test/cases/extend.with.placeholders.styl
+++ b/test/cases/extend.with.placeholders.styl
@@ -5,7 +5,7 @@ $ugly-red-button
   @extend $ugly-button
   background red
 
-// This selector is never used; it's properties won't appear in the output
+// This selector is never used; its properties won't appear in the output
 $ugly-blue-button
   @extend $ugly-button
   background blue
@@ -40,7 +40,7 @@ $foo
 .hello
   @extend $foo
 
-// Extend the placeholde inside another placeholder
+// Extend the placeholder inside another placeholder
 .lol
   @extend $foo $baz
 
