Better inline code

--- a/main.css
+++ b/main.css
@@ -146,6 +146,7 @@ p code {
   padding: 2px 4px;
   color: #565656;
   font-size: 85%;
+  white-space: nowrap;
   background: #fff;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
